Complete Sprint challenege and fixed logo location on desktop design

--- a/services.html
+++ b/services.html
@@ -22,6 +22,12 @@
   <body>
     <div class="container">
       <header>
+            <a href="index.html"
+            ><img
+              class="logo"
+              src="https://tk-assets.lambdaschool.com/c7e8c14d-d7ad-4d21-9c18-4a68c77e5ad5_logo.png"
+              alt="Great Idea! Company logo."
+          /></a>
         <nav>
           <a href="services.html">Services</a>
           <a href="products.html">Product</a>
@@ -30,14 +36,8 @@
           <a href="#">About</a>
           <a href="#">Contact</a>
         </nav>
-        <a href="index.html"
-          ><img
-            class="logo"
-            src="https://tk-assets.lambdaschool.com/c7e8c14d-d7ad-4d21-9c18-4a68c77e5ad5_logo.png"
-            alt="Great Idea! Company logo."
-        /></a>
       </header>
-      <img src="img/services-header.jpg" class="header-pic" />
+      <div class="headerImg"><img src="img/services-header.jpg" class="header-pic" /></div>
 
       <div class="top">
         <h4>Services</h4>
