completed stretch goal and fixed logo on desktop design

--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
           faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
         </p>
       </div>
-
+<!--BOXES START HERE-->
       <section class="s-content">
         <div class="boxes">
           <div class="text">
